      \file{limits.h} from C nor \file{climits} from C++.

      [This is scheduled to become the default on 2022-08-10.]
    }
  }

  \subsection{UTILITIES}{
    \itemize{
      \item \command{R CMD check} does more checking of package \file{.Rd}
      files, warning about invalid email addresses and (some) invalid
      URIs and noting empty \samp{\item} labels in description lists.
      
      \item \command{R CMD check} now also reports problems when reading
      package news in md (file \file{NEWS.md}) and (optionally) plain
      text (file \file{NEWS}) formats.
    }
  }

  \subsection{DEPRECATED AND DEFUNCT}{
    \itemize{
      \item \code{default.stringsAsFactors()} is defunct.
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item Hashed \code{environment}s with sizes less than 5 can now grow.
      (Reported to R-devel by Duncan Garmonsway.)

      \item \code{as.character(<Rd>, deparse = TRUE)} failed to
      re-escape curly braces in LaTeX-like text.
      (Reported by Hadley Wickham in \PR{18324}.)

      \item \code{library()} now passes its \code{lib.loc} argument when
      requiring \code{Depends} packages; reported (with fix) in \PR{18331}
      by Mikael Jagan.

      \item \code{R CMD Stangle}: improved message about \sQuote{Output}
      files.

      \item \code{head(x, n)} and \code{tail(x, n)} now signal an error if
      \code{n} is not numeric, instead of incidentally \dQuote{working}
      sometimes returning all of \code{x}.  Reported and discussed by Colin
      Fay, in \PR{18357}.

      \item \code{summary.lm()} now gives the correct F-statistic when
      the model contains an offset. Reported in \PR{18008}.

      \item \code{C()} and \code{`contrasts<-`()} now preserve factor
      level names when given a function object (as opposed a function
      name which did preserve names). Reported in \PR{17616}.

      \item \code{c(a=1, 2)[[]]} no longer matches \code{2} but rather